# ai-wiki

./: .env.example  .gitignore  CLAUDE.md  README.md  dump.md  list_inventory.py  main.py  pyproject.toml  setup.ps1
docker/: docker-compose.yml  docker-start.sh
docs/: 地域密着型工務店による顧客獲得と共感マーケティング戦略.md  大丸開発株式会社 臼井泉仁様への祝辞とサポート表明.md  顧客獲得・家づくりアプローチ手順書.md
src/: auth.py  classifier.py  classifier_claude.py  drive_lister.py  extractor.py  formatter.py  growi_writer.py  pipeline.py  state.py
tests/: test_classifier.py  test_drive_lister.py  test_formatter.py  test_growi_writer.py  test_state.py
